# python-package-template

./: .editorconfig  .readthedocs.yaml  CHANGELOG.md  CODE_STYLE.md  CONTRIBUTING.md  LICENSE.txt  PROJECT_STRUCTURE.md  README.md  _TODO.md  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: release.yaml  release2.yaml  test.yaml
docs/source/: conf.py
tests/: test_template.py
